# TRAE

./: .gitignore  .renderignore  Dockerfile  Procfile  README.md  __init__.py  alembic.ini  backend.json  config.py  create_tables.py  create_tables_rpc.py  create_tables_sql.py  create_tables_supabase.py  ecosystem.config.js  example_questions.json  generate_hashes.py  generate_passwords.py  models.py  package-lock.json  package.json  project_notes.txt  pyproject.toml  render.json  render.yaml  requirements.txt  seed_questions.py  setup.py  supabase_client.py  test_db.py  test_env.py  test_service.py  test_supabase.py
App/: __init__.py  auth.py  database.py  db_models.py  generate_passwords.py  main.py  models.py  storage.py  utils.py
App/models/: __init__.py  answer.py  question.py  session.py  test.py  user.py
App/routers/: __init__.py  auth.py  test.py  upload_router.py
App/static/: index.html  styles.css
App/templates/: index.html  register.html  tests.html
App/utils/: passwords.py
frontend/: package.json  render.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.css
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Home.tsx  Login.js  Results.js  Results.tsx  StudentTest.js  TeacherPanel.js  Tests.tsx
src/: App.tsx
src/pages/: Login.tsx  Results.tsx  StudentTest.tsx  TeacherPanel.tsx
tests/: math_test.json
