[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trae"
version = "0.1.0"
authors = [
    { name="Your Name", email="you@example.com" }
]
description = "School Testing Application"
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/M964292/TRAE"

[project.dependencies]
fastapi = ">=0.109.0"
uvicorn = ">=0.27.0"
pydantic = {extras = ["email"], version = "==2.5.3"}
passlib = "==1.7.4"
python-jose = {extras = ["cryptography"], version = "==3.3.0"}
jinja2 = "==3.1.2"
python-dotenv = "==0.19.0"
httpx = "==0.26.0"
python-multipart = "==0.0.5"
PyJWT = "==2.8.0"
supabase = ">=2.0.0"
pytest = "==7.4.3"

[tool.hatch.build.targets.wheel]
packages = ["App"]

[tool.hatch.build.targets.sdist]
packages = ["App"]
